# ChangeLog for app-arch/rpm2targz
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.87 2012/04/26 20:49:30 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  keyword ~amd64-fbsd

  01 Mar 2011; Brent Baude <ranger@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  stable ppc64, bug 354959

  27 Feb 2011; Brent Baude <ranger@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  stable ppc, bug 354959

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #354959

  21 Feb 2011; Jeroen Roovers <jer@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  Stable for HPPA (bug #354959).

  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rpm2targz-9.0.0.4g.ebuild:
  x86 stable wrt bug #354959

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
  Stable on amd64 wrt bug #354959

*rpm2targz-9.0.0.4g (06 Nov 2009)

  06 Nov 2009; Mike Frysinger <vapier@gentoo.org>
  +rpm2targz-9.0.0.4g.ebuild:
  Support xz rpms #292057 by Rafał Mużyło and always use rpmoffset
  #249769 by Michael Haubenwallner.

  18 Oct 2009; Alexis Ballier <aballier@gentoo.org>
  rpm2targz-9.0.0.3g.ebuild:
  keyword ~sparc-fbsd

  10 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  rpm2targz-9.0.0.0g.ebuild, rpm2targz-9.0.0.2g.ebuild,
  rpm2targz-9.0.0.3g.ebuild:
  Fix xz-utils vs. lzma-utils deps.

  29 Apr 2009; Jeroen Roovers <jer@gentoo.org> rpm2targz-9.0.0.3g.ebuild:
  Stable for HPPA (bug #264429).

  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> rpm2targz-9.0.0.3g.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #264429

  05 Apr 2009; Markus Meier <maekke@gentoo.org> rpm2targz-9.0.0.3g.ebuild:
  amd64/x86 stable, bug #264429

  31 Mar 2009; Joseph Jezak <josejx@gentoo.org> rpm2targz-9.0.0.3g.ebuild:
  Marked ppc/ppc64 stable for bug #264429.
