@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX rpm2targz-9.0.0.3g-memmove.patch 905 RMD160 b8142e541961f00f7ad55579feaa283bdbb69387 SHA1 d6d1ddaafd30a644e587cf4c93b279e5680a881e SHA256 d730d9cfa04f72faf031b98d05fc2adc886e665a03b26700dd1a8213aad0d72d
 DIST rpm2targz-9.0.0.4g.tar.lzma 4749 RMD160 e50c85143e6e65c3538ee6a8bb94fd7ead7930da SHA1 13465fd0f1dea7ff22f85237df0a5d1c641c9f0e SHA256 36de9e468663d16c6b2ae0c5e47c180389235ddc2888024f6a93b4ebef651a2d
+DIST rpm2targz-9.0.0.5g.tar.xz 5740 RMD160 5f1f266e014a8572e8e19c757e3a362480d0a347 SHA1 d6be32fc2b8fcd04c017f9ec1e014d4795b55e31 SHA256 4327b7dd30bf55e473198444b920029624948e24af575edff9ce466dcd4075e0
 EBUILD rpm2targz-9.0.0.4g-r00.1.ebuild 1015 RMD160 2c023eed367bb9a7abb5d70e735b2ecfd88e5583 SHA1 b82e9cfb6151e3c2535850780fa6c3fe959ecf29 SHA256 883e2b7f80a0a49dfcf3ae1e1db2669dbf3528610c06022aac55c952e563998c
-MISC ChangeLog 11578 RMD160 2f4d1230c43559a6b34f78a167e8904ce91ebf50 SHA1 a1d400dabc924c890289af939705d2a7f968b967 SHA256 5a3fc7f590af3623c793f260dca61997f59775b57a88b71cc5cdbfa1a043b5f5
+EBUILD rpm2targz-9.0.0.5g.ebuild 986 RMD160 ada79530e6630e2498d80067ea375a6feee6da21 SHA1 9ce1b7f09078b2f94ed124c76ab2cc687d6422d0 SHA256 794abadf6eda95a6311326df017e2248f1c9df737109ff4c8ece84464d287349
+MISC ChangeLog 11706 RMD160 ee3ddd443cdaf29b7df83d875f3a86f0c18425b1 SHA1 ad5fab1eaabb5abf50ae166dd52d72ba12589f77 SHA256 86ee07d417452599bbc54b4518fdaf9322cbbfc30b54e4e800d839e6ac6856e5
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+0qQcACgkQX3X2B8XHTonCHgCfVa/77Z0yCD8s9EG/HwK6m0AB
-dWAAn0JrSQ89LG/NeVmiJWv/zuRZaREy
-=BtkB
+iEYEARECAAYFAk/CBgAACgkQX3X2B8XHTomsIACfWs+4zPM/mgJ+8875Ycd4AK+O
+t38AoKP8OY/CS/immEzBdD9v8y5ujBUf
+=xeat
 -----END PGP SIGNATURE-----
