@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/rpm2targz
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.87 2012/04/26 20:49:30 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm2targz/ChangeLog,v 1.88 2012/05/17 05:03:23 vapier Exp $
+
+*rpm2targz-9.0.0.5g (17 May 2012)
+
+  17 May 2012; Mike Frysinger <vapier@gentoo.org> +rpm2targz-9.0.0.5g.ebuild:
+  Version bump.
 
   26 Apr 2012; Alexis Ballier <aballier@gentoo.org> rpm2targz-9.0.0.4g.ebuild:
   keyword ~amd64-fbsd
